observability_prometheus/_installProAmPg/1_prometheus/kube-prometheus/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
spec:
  rules:
    - host: prometheus.office.ppwi
      http:
        paths:
          - backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
